// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ColorScale /> should create color scale with min max value 1`] = `
<div>
  <div
    class="makeStyles-legend-18"
  >
    <p
      class="MuiTypography-root makeStyles-title-22 MuiTypography-body2"
    >
      infected
    </p>
    <div
      class="makeStyles-scaleContainer-17"
    >
      <div
        class="makeStyles-colorScale-19 makeStyles-colorScale-24"
      />
      <div
        class="makeStyles-labelScale-20"
      >
        <div
          class="makeStyles-label-21"
          style="top: calc(100% - 15px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-23 MuiTypography-body2"
          >
            100
          </p>
        </div>
        <div
          class="makeStyles-label-21"
          style="top: calc(0% - 5px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-23 MuiTypography-body2"
          >
            300
          </p>
        </div>
        <div
          class="makeStyles-label-21"
          style="top: calc(60% - 10px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-23 MuiTypography-body2"
          >
            40%
          </p>
        </div>
        <div
          class="makeStyles-label-21"
          style="top: calc(40% - 10px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-23 MuiTypography-body2"
          >
            60%
          </p>
        </div>
        <div
          class="makeStyles-label-21"
          style="top: calc(30.000000000000004% - 10px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-23 MuiTypography-body2"
          >
            70%
          </p>
        </div>
        <div
          class="makeStyles-label-21"
          style="top: calc(19.999999999999996% - 10px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-23 MuiTypography-body2"
          >
            80%
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ColorScale /> should disable percentage scale labels for disablePercentageScale 1`] = `
<div>
  <div
    class="makeStyles-legend-26"
  >
    <p
      class="MuiTypography-root makeStyles-title-30 MuiTypography-body2"
    >
      infected
    </p>
    <div
      class="makeStyles-scaleContainer-25"
    >
      <div
        class="makeStyles-colorScale-27 makeStyles-colorScale-32"
      />
      <div
        class="makeStyles-labelScale-28"
      >
        <div
          class="makeStyles-label-29"
          style="top: calc(100% - 15px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-31 MuiTypography-body2"
          >
            100
          </p>
        </div>
        <div
          class="makeStyles-label-29"
          style="top: calc(0% - 5px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-31 MuiTypography-body2"
          >
            300
          </p>
        </div>
        <div
          class="makeStyles-label-29"
          style="top: calc(60% - 10px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-31 MuiTypography-body2"
          />
        </div>
        <div
          class="makeStyles-label-29"
          style="top: calc(40% - 10px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-31 MuiTypography-body2"
          />
        </div>
        <div
          class="makeStyles-label-29"
          style="top: calc(30.000000000000004% - 10px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-31 MuiTypography-body2"
          />
        </div>
        <div
          class="makeStyles-label-29"
          style="top: calc(19.999999999999996% - 10px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-31 MuiTypography-body2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ColorScale /> should match snapshot 1`] = `
<div>
  <div
    class="makeStyles-legend-2"
  >
    <p
      class="MuiTypography-root makeStyles-title-6 MuiTypography-body2"
    >
      titleText
    </p>
    <div
      class="makeStyles-scaleContainer-1"
    >
      <div
        class="makeStyles-colorScale-3 makeStyles-colorScale-8"
      />
      <div
        class="makeStyles-labelScale-4"
      >
        <div
          class="makeStyles-label-5"
          style="top: calc(100% - 15px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-7 MuiTypography-body2"
          >
            0%
          </p>
        </div>
        <div
          class="makeStyles-label-5"
          style="top: calc(0% - 5px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-7 MuiTypography-body2"
          >
            100%
          </p>
        </div>
        <div
          class="makeStyles-label-5"
          style="top: calc(60% - 10px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-7 MuiTypography-body2"
          >
            40%
          </p>
        </div>
        <div
          class="makeStyles-label-5"
          style="top: calc(40% - 10px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-7 MuiTypography-body2"
          >
            60%
          </p>
        </div>
        <div
          class="makeStyles-label-5"
          style="top: calc(30.000000000000004% - 10px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-7 MuiTypography-body2"
          >
            70%
          </p>
        </div>
        <div
          class="makeStyles-label-5"
          style="top: calc(19.999999999999996% - 10px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-7 MuiTypography-body2"
          >
            80%
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ColorScale /> should match snapshot without 0.0 as scale 1`] = `
<div>
  <div
    class="makeStyles-legend-10"
  >
    <p
      class="MuiTypography-root makeStyles-title-14 MuiTypography-body2"
    >
      infected
    </p>
    <div
      class="makeStyles-scaleContainer-9"
    >
      <div
        class="makeStyles-colorScale-11 makeStyles-colorScale-16"
      />
      <div
        class="makeStyles-labelScale-12"
      >
        <div
          class="makeStyles-label-13"
          style="top: calc(100% - 15px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-15 MuiTypography-body2"
          >
            0%
          </p>
        </div>
        <div
          class="makeStyles-label-13"
          style="top: calc(0% - 5px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-15 MuiTypography-body2"
          >
            100%
          </p>
        </div>
        <div
          class="makeStyles-label-13"
          style="top: calc(60% - 10px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-15 MuiTypography-body2"
          >
            40%
          </p>
        </div>
        <div
          class="makeStyles-label-13"
          style="top: calc(40% - 10px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-15 MuiTypography-body2"
          >
            60%
          </p>
        </div>
        <div
          class="makeStyles-label-13"
          style="top: calc(30.000000000000004% - 10px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-15 MuiTypography-body2"
          >
            70%
          </p>
        </div>
        <div
          class="makeStyles-label-13"
          style="top: calc(19.999999999999996% - 10px);"
        >
          <p
            class="MuiTypography-root makeStyles-legendTick-15 MuiTypography-body2"
          >
            80%
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
